@@ -528,8 +528,9 @@ int frame_cpu_opt(mpg123_handle *fr, const char* cpu)
 			fr->cpu_opts.type = dreidnowext;
 #ifdef OPT_MULTI
 #			ifndef NO_LAYER3
-/* The DCT36 is _bad_, at least compared to gcc 4.4-built C code. */
-/*			fr->cpu_opts.the_dct36 = dct36_3dnowext; */
+#			ifdef DCT36_3DNOW
+			fr->cpu_opts.the_dct36 = dct36_3dnowext;
+#			endif
 #			endif
 #endif
 #			ifndef NO_16BIT
@@ -546,8 +547,9 @@ int frame_cpu_opt(mpg123_handle *fr, const char* cpu)
 			fr->cpu_opts.type = dreidnow;
 #ifdef OPT_MULTI
 #			ifndef NO_LAYER3
-/* The DCT36 is _bad_, at least compared to gcc 4.4-built C code. */
-/*			fr->cpu_opts.the_dct36 = dct36_3dnow; */
+#			ifdef DCT36_3DNOW
+			fr->cpu_opts.the_dct36 = dct36_3dnow;
+#			endif
 #			endif
 #endif
 #			ifndef NO_16BIT
